# rustcc

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_compile.rs
rustcc/: Cargo.toml
rustcc/src/: ast.rs  codegen.rs  command_line.rs  diagnostic.rs  diagnostic_builder.rs  diagnostic_consumer.rs  diagnostic_engine.rs  lexer.rs  lib.rs  main.rs  parser.rs  source_file.rs  source_location.rs  source_manager.rs  source_range.rs  token.rs
rustcc/tests/: command_line.rs  run-test-driver.rs  test-driver.rs
rustcc/tests/input/Lexer/: comment.c  multi_digit.c  multi_linecomment.c  return_0.c  return_2.c  spaces.c
rustcc/tests/input/Lexer/invalid/: at_sign.c  backslash.c  backtick.c  invalid_identifier.c  invalid_identifier_2.c
rustcc/tests/input/binary/: add.c  associativity.c  associativity_2.c  associativity_3.c  associativity_and_precedence.c  div.c  div_neg.c  mod.c  mult.c  parens.c  precedence.c  sub.c  sub_neg.c  unop_add.c  unop_parens.c
rustcc/tests/input/codegen/: return_0.c  return_2.c
rustcc/tests/input/command_line/: V.c  h.c  help.c  version.c
rustcc/tests/input/lexer/: bitwise.c  comment.c  multi_linecomment.c  negate.c  newlines.c  no_newlines.c  tabs.c
rustcc/tests/input/lexer/crash/: crash-0ef2a36978d541a9161cef5f969766b662a5828a437b15cc0a6c1b16a0c087e9.c  crash-31543fb32b45148de1ce3e5fa8314623d6f2dc8ddd264a590f79ad110757f27b.c  crash-42099b4af021e53fd8fd4e056c2568d7c2e3ffa8.c  crash-e6a9fc04320a924f46c7c737432bb0389d9dd095.c  crash-f1534392279bddbf9d43dde8701cb5be14b82f76ec6607bf8d6ad557f60f304e.c
rustcc/tests/input/lexer/invalid/: at_sign.c  backslash.c  backtick.c  digit_overflow.c  invalid_identifier.c  invalid_identifier_2.c
rustcc/tests/input/lexer/warning/: null.c
rustcc/tests/input/parser/: return_0.c  return_2.c
rustcc/tests/input/parser/invalid/: end_before_expr.c  extra_junk.c  invalid_function_name.c  keyword_wrong_case.c  missing_type.c  misspelled_keyword.c  no_semicolon.c  not_expression.c  space_in_keyword.c  switched_parens.c  unclosed_brace.c  unclosed_paren.c
rustcc/tests/input/unary/: bitwise.c  bitwise_int_min.c  bitwise_zero.c  neg.c  neg_zero.c  negate_int_max.c  nested_ops.c  nested_ops_2.c  parens.c  parens_2.c  parens_3.c  redundant_parens.c
rustcc/tests/input/unary/invalid/: extra_paren.c  missing_const.c  missing_semicolon.c  nested_missing_const.c  parenthesize_operand.c  unclosed_paren.c  wrong_order.c
rustcc/tests/output/Lexer/: multi_digit.out  newlines.out  return_2.out  spaces.out
rustcc/tests/output/Lexer/invalid/: at_sign.out  backslash.out  invalid_identifier.out  invalid_identifier_2.out
rustcc/tests/output/codegen/: return_0.out  return_2.out
rustcc/tests/output/command_line/: h.out  help.out  version.out
rustcc/tests/output/lexer/: bitwise.out  comment.out  multi_digit.out  multi_linecomment.out  negate.out  newlines.out  no_newlines.out  return_0.out  return_2.out  spaces.out  tabs.out
rustcc/tests/output/lexer/crash/: crash-0ef2a36978d541a9161cef5f969766b662a5828a437b15cc0a6c1b16a0c087e9.out  crash-31543fb32b45148de1ce3e5fa8314623d6f2dc8ddd264a590f79ad110757f27b.out  crash-e6a9fc04320a924f46c7c737432bb0389d9dd095.out  crash-f1534392279bddbf9d43dde8701cb5be14b82f76ec6607bf8d6ad557f60f304e.out
rustcc/tests/output/lexer/invalid/: at_sign.out  backslash.out  backtick.out  digit_overflow.out  invalid_identifier.out  invalid_identifier_2.out
rustcc/tests/output/lexer/warning/: null.out
rustcc/tests/output/parser/: return_0.out  return_2.out
rustcc/tests/output/parser/invalid/: end_before_expr.out  extra_junk.out  invalid_function_name.out  keyword_wrong_case.out  missing_type.out  misspelled_keyword.out  no_semicolon.out  not_expression.out  space_in_keyword.out  switched_parens.out  unclosed_brace.out  unclosed_paren.out
rustcc/tests/output/unary/: bitwise.out  bitwise_int_min.out  bitwise_zero.out  neg.out  neg_zero.out  negate_int_max.out  nested_ops.out  nested_ops_2.out  parens.out  parens_2.out  parens_3.out  redundant_parens.out
rustcc/tests/output/unary/invalid/: extra_paren.out  missing_const.out  missing_semicolon.out  (+4 more)
(+20 files in other folders)
