[workspace]
resolver = "2"
members = ["rustcc", "rustcc-driver", "test-driver"]

[workspace.package]
authors = ["AMS21 <ams21.github@gmail.com>"]
edition = "2024"
license = "MIT"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
assert_cmd = "2.0.16"
clap = "4.5.32"
colored = "3.0.0"
regex = "1.11.1"
