[workspace]
resolver = "2"
members = ["rustcc", "rustcc-driver", "test-driver"]
exclude = ["fuzz"]

[workspace.package]
authors = ["AMS21 <ams21.github@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/AMS21/rustcc"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
assert_cmd = "2.0.16"
clap = "4.5.34"
colored = "3.0.0"
elsa = "1.11.2"
llvm-sys = "=191.0.0"
libc = "0.2.171"
regex = "1.11.1"
tempfile = "3.19.1"

# Enable full LTO for release builds
[profile.release]
codegen-units = 1
lto = "fat"

# Enable high optimizations for dependencies but not for our code
[profile.dev.package."*"]
opt-level = 3
