[package]
name = "rustcc-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.9"

[dependencies.rustcc]
path = "../rustcc"

[[bin]]
name = "fuzz_compile"
path = "fuzz_targets/fuzz_compile.rs"
test = false
doc = false
bench = false
